syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

/*
protoc --proto_path=_Protos --csharp_out=AutoReservation.Service.Grpc/dto _Protos/auto.proto
*/
service AutoService {
}

message AutoDto {
    int32 id = 1;
    int32 basistarif = 2;
    string marke = 3;
    AutoKlasse autoKlasse = 4;
    bytes rowVersion = 5;
    int32 tagestarif = 6;
}

enum AutoKlasse {
    LUXUSKLASSE = 0;
    MITTELKLASSE = 1;
    STANDARD = 2;
}