syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "auto.proto";
import "kunde.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service ReservationService {
}

message ReservationDto {
    google.protobuf.Timestamp bis = 1;
    int32 reservationsNr = 2;
    bytes rowVersion = 3;
    google.protobuf.Timestamp von = 4;
    AutoDto auto = 5;
    KundeDto kunde = 6;
}